[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recranger-pywallet"
version = "0.0.1"
authors = [{ name = "RecRanger", email = "RecRanger+package@proton.me" }]
description = "pywallet"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/RecRanger/pywallet"
Issues = "https://github.com/RecRanger/pywallet/issues"
